added code to file

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1></h1>
     <nav>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Link One</li>
+            <li>Link Two</li>
+            <li>Link Three</li>
+            <li>Link Four</li>
         </ul>
     </nav>
 </header>
 <main>
-    <img>
+    <img src="http://placehold.it/960x450">
     <!--<h2></h2>
     <p></p> -->
     <ul>
